--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -2,8 +2,8 @@
  
 \usepackage[utf8]{inputenc}
  
- 
-\usepackage{geometry} % to change the page dimensions
+
+\usepackage[bottom = 8em]{geometry} % to change the page dimensions
 \geometry{a4paper} % or letterpaper (US) or a5paper or....
  
 \usepackage{graphicx} % support the \includegraphics command and options
@@ -28,6 +28,7 @@
 \renewcommand{\headrulewidth}{0pt} % customise the layout...
 \lhead{}\chead{}\rhead{}
 \lfoot{}\cfoot{\thepage}\rfoot{}
+
  
 %%% SECTION TITLE APPEARANCE
 \usepackage{sectsty}
@@ -39,7 +40,7 @@
 \usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
 \renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
 \renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
- 
+
  
  
 %%% END Article customizations
