added stuff to the report and network protocol added

--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -54,19 +54,61 @@
  
 \begin{document}
 \maketitle
-\begin{abstract}
- 
-Abstract
- 
-\end{abstract}
+%\begin{abstract}
+% 
+%Abstract
+% 
+%\end{abstract}
  
 \newpage
 \tableofcontents
 \newpage
  
-\section{Section}
-\subsection{subsection}
-\subsubsection{subsubsection}
+\section{Heuristic}
+
+\section{Results}
+
+\subsection{Novice vs Random}
+  \begin{tabular}{| l  l  r l |}
+    \hline
+ 	Player 1 & (random) & wins: & 1 \\
+ 	Player 2 & (novice) & wins: & 99 \\
+ 	& &  Ties: & 0 \\
+    \hline
+  \end{tabular}
+
+
+
+\subsection{Minimax depth 3 vs novice}
+  \begin{tabular}{| l  l  r l |}
+    \hline
+ 	Player 1 & (minimax\_3) & wins: & 16 \\
+ 	Player 2 & (novice) & wins: & 3 \\
+ 	& &  Ties: & 1 \\
+    \hline
+  \end{tabular}
+
+
+\subsection{Minimax depth 4 vs Minimax depth 3}
+  \begin{tabular}{| l  l  r l |}
+    \hline
+ 	Player 1 & (minimax\_4) & wins: & 20 \\
+ 	Player 2 & (minimax\_3) & wins: & 0 \\
+ 	& &  Ties: & 0 \\
+    \hline
+  \end{tabular}
+
+\section{Tournament}
+
+\subsection{}
+
+\subsection{Result}
+
+\subsection{Experience}
+
+
+
+
 
 
  
