forgot to push changers tot the report, now merging

--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -64,9 +64,13 @@ Abstract
 \tableofcontents
 \newpage
  
-\section{Section}
-\subsection{subsection}
-\subsubsection{subsubsection}
+\section{Novice vs. Random}
+Stats:\\
+Player1 (random) wins: 7\\
+Player2 (novice) wins: 93 \\
+Ties:0 \\
+
+
 
 
  
