--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -64,6 +64,8 @@
 \tableofcontents
 \newpage
  
+\section{Stuff to explain about the general game etc}
+Woot
 
 \section{Heuristic}
 The heuristic gives 500 points if a node is a winning node with depth 1 or any odd numbered depth, this means that we have gotten the board and placed a piece on the board which led to a win. If the depth is an even number however and the node is a winning state, then the heuristic gives -500, because that would mean that the opponent have just put down a piece and there's a winning state. \\
@@ -85,9 +87,9 @@ The trickiest part is the 3 pieces in a row, the system tries to check whenever 
 \subsection{Minimax depth 3 vs novice}
   \begin{tabular}{| l  l  r l |}
     \hline
- 	Player 1 & (minimax\_3) & wins: & 16 \\
- 	Player 2 & (novice) & wins: & 3 \\
- 	& &  Ties: & 1 \\
+ 	Player 1 & (minimax\_3) & wins: & 18 \\
+ 	Player 2 & (novice) & wins: & 2 \\
+ 	& &  Ties: & 0 \\
     \hline
   \end{tabular}
 
@@ -95,9 +97,9 @@ The trickiest part is the 3 pieces in a row, the system tries to check whenever 
 \subsection{Minimax depth 4 vs Minimax depth 3}
   \begin{tabular}{| l  l  r l |}
     \hline
- 	Player 1 & (minimax\_4) & wins: & 20 \\
- 	Player 2 & (minimax\_3) & wins: & 0 \\
- 	& &  Ties: & 0 \\
+ 	Player 1 & (minimax\_4) & wins: & 18 \\
+ 	Player 2 & (minimax\_3) & wins: & 1 \\
+ 	& &  Ties: & 1 \\
     \hline
   \end{tabular}
 
@@ -108,9 +110,9 @@ The trickiest part is the 3 pieces in a row, the system tries to check whenever 
 \subsection{Result}
 
 \subsection{Experience}
-Luckily for us, the tournament protocol was pretty straight forward. I got an email giving me the zip file with the needed file(s). The zip had 2 jar files (with had the needed library to connect to the server) and an interface which we needed to implement. There were also an example file which showed us which method we needed to implement and how it was done. \\
-It was pretty straightforward to connect to the server and start playing against the other bots, however the server didn't check for validity (for instance if the move or given piece is a legal one in which we had to check ourself), this did cause a lot of frustration because the board we were playing on could easily be different from the one on the server. \\
-First thing we noticed when we read the code was that the order of the pieces was different than ours.\\
+Luckily for us, the tournament protocol was pretty straight forward. I got an email giving me the zip file with the needed file(s). The zip had 2 jar files (which had the needed library to connect to the server) and an interface which we needed to implement. There were also an example file which showed us which method we needed to implement and how it was done. \\
+It was pretty easy to connect to the server and start playing against the other bots, however the server didn't check for validity (for instance if the move or the given piece is a legal one which meant we had to check for ourselves), this did cause a lot of frustration because the board we were playing on could easily be different from the one on the server. \\
+The first thing we noticed when we read the code was that the order of the pieces was different than ours.\\
 Their pieces were organized like this:
 \begin{verbatim}
 (r) (r*) (R) (R*) |r| |r*| |R| |R*| (b) (b*) (B) (B*) |b| |b*| |B| |B*|
@@ -120,7 +122,7 @@ and ours were:
 0:|R*|  1:|R|  2:|r*|  3:|r|  4:(R*)  5:(R)  6:(r*)  7:(r)
 8:|B*|  9:|B|  10:|b*|  11:|b|  12:(B*)  13:(B)  14:(b*)  15:(b)
 \end{verbatim}
-, but we fixed this easily by tweaking our code.
+but we fixed this easily by tweaking our code.
 There's also a bit of frustration involved when it comes to debugging, the server seems to be random.
 
  
