--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -67,11 +67,47 @@
 \section{Demo}
 Demo
 
-\section{Heuristic}
-The heuristic gives 500 points if a node is a winning node with depth 1 or any odd numbered depth, this means that we have gotten the board and placed a piece on the board which led to a win. If the depth is an even number however and the node is a winning state, then the heuristic gives -500, because that would mean that the opponent have just put down a piece and there's a winning state. \\
-The heuristic gives points for whenever there's 2 pieces with similar property in a row/col/diagonal because that would make it closer to the winning state, which is easier for the computer and might be harder for a human to see, therefore it considers 2 in a row a partial good state. The heuristic gives 2 points for every property that are 2-pieces in a row, for instance if we have a big square red piece next to a big square holed red piece the heuristic would give 6 points (2 for big, 2 for square and 2 for red).\\
+\section{Our implementation}
+
+\subsection{The internal representation}
+We use a 2 dimensional array to represent our board, and a 1 dimensional array to represent the remaining pieces.\\ \\
+The game appears like this whenever a move is made:
+
+\begin{verbatim}
+
+Turn 0 minimax_3
+choose piece:
+1
+Chosen piece: 1: (r*)
+ .   .   .  (r*)
+ .   .   .   . 
+ .   .   .   . 
+ .   .   .   . 
+
+Remaining:
+0:(r)   2:(R)   3:(R*)  4:|r|    5:|r*|  6:|R|  7:|R*|  8:(b)  9:(b*)  
+10:(B)  11:(B*) 12:|b|  13:|b*|  14:|B|  15:|B*|  
+____________________________________________________________
+
+Turn 1 human
+Chosen piece: 4: |r|
+choose an X, and Y
+
+\end{verbatim}
+
+\subsection{Heuristic}
+The heuristic gives 500 points if a node is a winning node with depth 1 or any odd numbered depth, this means that we have recieved a Piece and placed it on the board which led to a win. If the depth is an even number however and the node is a winning state, then the heuristic gives -500, because that would mean that the opponent have just put down a piece and there's a winning state. \\
+The heuristic gives points for whenever there's 2 pieces with similar property in a row/col/diagonal because that would bring it closer to a winning state, which is easier to notice for the computer, and might be harder for a human to see, therefore it considers 2 in a row to be a partially good state. The heuristic gives 2 points for every property that are 2-pieces in a row, for instance if we have a big square red piece next to a big square holed red piece the heuristic would give 6 points (2 for big, 2 for square and 2 for red).\\
 The trickiest part is the 3 pieces in a row, the system tries to check whenever there's 3 pieces in a row with the same properties. If it for instance sees 3 red pieces in a row, it will start to count how many blue pieces there are left, if there are an even number of blue pieces left, it will give partial credit. This is because you will win if both players are trying to only give blue to avoid the loss, the last blue piece given will be ours, therefore it'll force the other bot to give us a red piece which will lead to a win. That's why we give partial credit for 2 pieces in a row with the same property, because this will easier lead to the 3-pieces state. The heuristic gives 5 points for every property that are 3-pieces in a row, for instance if we have a big square red piece next to a big square holed red piece and a big round red piece the heuristic would give 10 points (5 for big, 5 for red).\\
-Our minimax bot doesn't really care about what property each piece have, the bot checks how many pieces there are in a row then checks how many of the same properties the pieces have. This is done by making an int array of size 8, which counts number of holes, non-holes, round, square, big, small, reds and blues. It then gets an int array of size 8 which is the same as the one mentioned earlier, but this one counts all the properties 
+Our minimax bot doesn't really care about what specific property each piece have as long as the numbers add up, the bot checks how many pieces there are in a row then checks how many of the same properties the pieces have. This is done by making an int array of size 8, which counts number of holes, non-holes, round, square, big, small, reds and blues. It then gets an int array of size 8 which is the same as the one mentioned earlier, with each index in the array representing a property.
+
+\subsection{Minimax with Alpha-Beta pruning}
+The way our algorithm implements alpha-beta pruning is by using the well established depth-first approach to both generate and evaluate the children at depth N on the go. The aim is to only generate the needed children and only keep track of the best children, and propagate the value of an arbitrary chosen one of the best children (if there are more than one optimal one. Otherwise return the singular best state). \\ 
+Thus if we have a minimax\_3 bot, it will first generate the root (the state it is in now), then generate its leftmost child (placing the provided piece in the top left available corner on the internal board), and choose the first available Piece from the remaining pieces to send to its child. Then this node generates its leftmost child and repeats the same process. Finally the process is done again, but because we are now at the maximum depth we are now at leaf level, meaning we now get to evaluate the node with the heuristic function and then propagate this value back up to the parent. \\
+As we are at depth 2 we are at a Max node, thus we attempt to maximize alpha, meaning we update alpha to the returned value if it is better than the previous alpha. Because we have yet to propagate a value up to a Min node, we do not have a beta value, meaning we have to check all the remaining variations of the first child at depth 2. When we have explored them all we return the best child, and beta is now updated. So for the next child at depth 2 we have a beta to compare with, meaning we can now cut off whenever alpha gets better than the beta, reducing the search space considerably. When we have checked all the children at depth 2 for the first child of depth 1 we can propagate a alpha value up to depth 0, meaning we can now also cut off if we find that a child at depth 1 is worse than either of the previous children. \\
+Whenever we leave a subtree all that remains of it is a State object explainig its properties. If it is better than the previous states we clear the best State list and add the new State. If the state is equally good to the previous best we add the new state to the list containing the best states. \\
+After all the needed children are generated we are left with a single State object containing the coordinates to place the provided Piece, an index explaining which Piece to give to the opponent, and a value explaining how good this move is. 
+
 
 
 
@@ -151,8 +187,8 @@ and ours were:
 \end{verbatim}
 but we fixed this easily by tweaking how our pieces were generated, so now our list looks exactly like the protocol's and we can easily receive and send piece index without worrying about which piece is which, because it's the same piece.\\ \\
 There's also a bit of frustration involved with the debugging, as the conversion between input/output from java, and javascript with json, proved to be quite a handful. There were also some conflicts regarding who was supposed to start, as the broadcasted player turn sometimes did not add up between our game sessions. We seem to have found the source of the problem but a rare bug did appear from time to time. The first player are supposed to send positionIndex = -1 (which mean that you put down a piece outside the board) and a pieceIndex. However due to the meteor framework (which is what Thaffe's server is running) only sends changes it sometime didn't send a positionIndex = -1, but it sent positionIndex = 0 (this was interpreted wrongly by our client because our client thought it was supposed to start by giving a piece) so when our client got the positionIndex = 0 and a piece X it started by putting the piece it thought it gave to the server on spot 0. Long story short, our client would crash when we got the piece from the server that our client thought it gave in the beginning or the server put down a piece on spot 0 (which was occupied by the first piece on our client's board) this lead to us having 2 different boards on the client and the server side.\\ 
-However the bug seems to be fixed, and the problem that we had doesn't always occur, so we can easily just start a new game if a match has crashed. \\
-We also would like to give credit to Thaffe for writing the protocol, he wrote his code in javascript using the meteor framework  but he was kind and wrote the java protocol and and interface that we could easily use to connect to his server and he was bug fixing and debugging the code when things went wrong.
+However the bug seems to be fixed, and the problem that we had doesn't always occur, so we can easily just start a new game if a match has crashed. \\ \\
+We would like to give credit to Thaffe for writing the protocol, he wrote his code in javascript using the meteor framework, but he was kind enough to write a java protocol and interface so that we could easily connect to his server, and he was also bug fixing and debugging the code when things went wrong. Big kudos to him.
 
 
 \end{document}
