--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -10,6 +10,7 @@
  
 \usepackage{booktabs} % for much better looking tables
 \usepackage{array} % for better arrays (eg matrices) in maths
+\usepackage{float}
 \usepackage{paralist} % very flexible & customisable lists (eg. enumerate/itemize, etc.)
 \usepackage{verbatim} % adds environment for commenting out blocks of text & for better verbatim
 \usepackage{subfig} % make it possible to include more than one captioned figure/table in a single float
@@ -40,7 +41,6 @@
 \usepackage[titles,subfigure]{tocloft} % Alter the style of the Table of Contents
 \renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
 \renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
-
  
  
 %%% END Article customizations
@@ -71,8 +71,8 @@ Demo
 
 \subsection{The internal representation}
 We use a 2 dimensional array to represent our board, and a 1 dimensional array to represent the remaining pieces.\\ \\
-The game appears like this whenever a move is made:
-
+The game appears like this whenever a move is made:\\
+\begin{figure}[H]
 \begin{verbatim}
 
 Turn 0 minimax_3
@@ -85,15 +85,73 @@ Chosen piece: 1: (r*)
  .   .   .   . 
 
 Remaining:
-0:(r)   2:(R)   3:(R*)  4:|r|    5:|r*|  6:|R|  7:|R*|  8:(b)  9:(b*)  
+ 0:(r)   2:(R)   3:(R*)  4:|r|    5:|r*|  6:|R|  7:|R*|  8:(b)  9:(b*)  
 10:(B)  11:(B*) 12:|b|  13:|b*|  14:|B|  15:|B*|  
 ____________________________________________________________
 
 Turn 1 human
 Chosen piece: 4: |r|
 choose an X, and Y
+\end{verbatim}
+\caption{Initial move}
+\label{figure1}
+\end{figure}
+\noindent
+And this is how it looks after a few moves have been played (and coincidentally where the minimax bot will win no matter what piece it's given):\\
+
+\begin{figure}[H]
+\begin{verbatim}
+
+Turn 7 human
+Chosen piece: 0: (r)
+choose an X, and Y
+1 3
+|r|    .    .   (r*)
+|B*|   .   (B*) (R*)
+ .     .    .    . 
+|b*|  (r)  (b)   . 
+
+Remaining:
+2:(R)  5:|r*|  6:|R|  7:|R*|  9:(b*)  10:(B)  12:|b|  14:|B|  
+____________________________________________________________
+
+Turn 8 minimax_3
+choose piece:
+\end{verbatim}
+\caption{Midgame move}
+\label{figure2}
+\end{figure}
+\noindent
+Finally a winning state looks like this:\\
+\begin{figure}[H]
+\begin{verbatim}
+
+Turn 8 minimax_3
+choose piece:
+2
+Chosen piece: 2: (R)
+|r|   .   .   (r*)
+|B*| (R) (B*) (R*)
+ .    .   .    . 
+|b*| (r) (b)   . 
+
+Remaining:
+5:|r*|  6:|R|  7:|R*|  9:(b*)  10:(B)  12:|b|  14:|B|  
+____________________________________________________________
+
+Player1 (minimax_3) won
+____________________________________________________________
+Stats (minimax_3 vs human):
+Runs: 1
+Player1 (minimax_3) wins:1
+Player2 (human) wins:0
+Ties:0
 
 \end{verbatim}
+\caption{Post game}
+\label{figure3}
+\end{figure}
+
 
 \subsection{Heuristic}
 The heuristic gives 500 points if a node is a winning node with depth 1 or any odd numbered depth, this means that we have recieved a Piece and placed it on the board which led to a win. If the depth is an even number however and the node is a winning state, then the heuristic gives -500, because that would mean that the opponent have just put down a piece and there's a winning state. \\
@@ -155,7 +213,7 @@ Play 10 games versus each of the other groups bots. With their respective minima
 
 \includegraphics[width=19cm]{thaffe.png}
 \caption{The result of a online fight}
-\label{figure1}
+\label{figure4}
 
 \end{figure}
 
