--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -65,12 +65,12 @@
 \newpage
  
 \section{Demo}
-Demo
+Please refer to the delivered code.
 
 \section{Our implementation}
 
 \subsection{The internal representation}
-We use a 2 dimensional array to represent our board, and a 1 dimensional array to represent the remaining pieces.\\ \\
+We have a Board class to maintain a working gameboard which contains a 2 dimensional array to represent our board, and a 1 dimensional array to represent the remaining pieces. We also have numerous fields and arrays to act as counters for how many Pieces are placed on a given row f.ex. and to check whether a board is internal or not(internal meaning a temporary board used in either novice or minimax)\\ \\
 The game appears like this whenever a move is made:\\
 \begin{figure}[H]
 \begin{verbatim}
@@ -106,10 +106,10 @@ Turn 7 human
 Chosen piece: 0: (r)
 choose an X, and Y
 1 3
-|r|    .    .   (r*)
-|B*|   .   (B*) (R*)
- .     .    .    . 
-|b*|  (r)  (b)   . 
+|r|   .   .   (r*)
+|B*|  .  (B*) (R*)
+ .    .   .    . 
+|b*| (r) (b)   . 
 
 Remaining:
 2:(R)  5:|r*|  6:|R|  7:|R*|  9:(b*)  10:(B)  12:|b|  14:|B|  
@@ -152,6 +152,10 @@ Ties:0
 \label{figure3}
 \end{figure}
 
+\subsection{Evaluate the board}
+To be able to easily check whether a given board is a final state or not we have constructed several counters. We have a 1 dimensional array with length 4 to keep track of placed pieces on each row and column, and 2 seperate fields for the diagonals. We have a few functions which utilize these properties by only 
+
+
 
 \subsection{Heuristic}
 The heuristic gives 500 points if a node is a winning node with depth 1 or any odd numbered depth, this means that we have recieved a Piece and placed it on the board which led to a win. If the depth is an even number however and the node is a winning state, then the heuristic gives -500, because that would mean that the opponent have just put down a piece and there's a winning state. \\
@@ -163,7 +167,7 @@ Our minimax bot doesn't really care about what specific property each piece have
 The way our algorithm implements alpha-beta pruning is by using the well established depth-first approach to both generate and evaluate the children at depth N on the go. The aim is to only generate the needed children and only keep track of the best children, and propagate the value of an arbitrary chosen one of the best children (if there are more than one optimal one. Otherwise return the singular best state). \\ 
 Thus if we have a minimax\_3 bot, it will first generate the root (the state it is in now), then generate its leftmost child (placing the provided piece in the top left available corner on the internal board), and choose the first available Piece from the remaining pieces to send to its child. Then this node generates its leftmost child and repeats the same process. Finally the process is done again, but because we are now at the maximum depth we are now at leaf level, meaning we now get to evaluate the node with the heuristic function and then propagate this value back up to the parent. \\
 As we are at depth 2 we are at a Max node, thus we attempt to maximize alpha, meaning we update alpha to the returned value if it is better than the previous alpha. Because we have yet to propagate a value up to a Min node, we do not have a beta value, meaning we have to check all the remaining variations of the first child at depth 2. When we have explored them all we return the best child, and beta is now updated. So for the next child at depth 2 we have a beta to compare with, meaning we can now cut off whenever alpha gets better than the beta, reducing the search space considerably. When we have checked all the children at depth 2 for the first child of depth 1 we can propagate a alpha value up to depth 0, meaning we can now also cut off if we find that a child at depth 1 is worse than either of the previous children. \\
-Whenever we leave a subtree all that remains of it is a State object explainig its properties. If it is better than the previous states we clear the best State list and add the new State. If the state is equally good to the previous best we add the new state to the list containing the best states. \\
+Whenever we leave a subtree all that remains of it is a State object explaining the properties of the best child. If it is better than the previous states we clear the best State list and add the new State. If the state is equally good to the previous best we add the new state to the list containing the best states. \\
 After all the needed children are generated we are left with a single State object containing the coordinates to place the provided Piece, an index explaining which Piece to give to the opponent, and a value explaining how good this move is. 
 
 
@@ -211,7 +215,7 @@ Play 10 games versus each of the other groups bots. With their respective minima
 
 \begin{figure}[h]
 
-\includegraphics[width=19cm]{thaffe.png}
+\includegraphics[width=19cm]{thaffe100.png}
 \caption{The result of a online fight}
 \label{figure4}
 
