--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -207,15 +207,15 @@ After all the needed children are generated we are left with a single State obje
 \section{Tournament}
 
 \subsection{Rules of the tournament}
-Play 10 games versus each of the other groups bots. With their respective minimax\_4 bot. The tournament format was round robin, meaning everyone plays against everyone. 
+Play at least 100 games, with minimax depth 4 if possible, if a player can't play with depth 4 due to memory restriction or because of other reasons we will play with the highest depth possible (1,2 or 3). Round robin; everyone plays against everyone. 
 
 \subsection{Result}
 \subsubsection{Our vs Nicolay Thaffe}
 
 \begin{figure}[h]
-
-\includegraphics[width=19cm]{thaffe100.png}
+\includegraphics[width=15cm]{thaffe100.png}
 \caption{The result of a online fight}
+
 \label{figure4}
 
 \end{figure}
@@ -235,7 +235,7 @@ Play 10 games versus each of the other groups bots. With their respective minima
 
 \subsection{Experience}
 Luckily for us, the tournament protocol was pretty straight forward. We got an email giving us the zip file with the needed file(s). The zip had 2 jar files (which had the needed library to connect to the server) and an interface which we needed to implement. There were also an example file which showed us which method we needed to implement and how it was done. \\
-It was pretty easy to connect to the server and start playing against the other bots, however the server didn't check for validity (for instance if the move or the given piece is a legal one which meant we had to check for ourselves), this did cause a lot of frustration because the board we were playing on could easily be different from the one on the server. \\
+It was pretty easy to connect to the server and start playing against the other bots, however the server didn't check for validity (for instance if the move or the given piece is a legal one which meant we had to check for it by ourselves), this did cause a lot of frustration because the board we were playing on could easily be different from the one on the server. \\
 The first thing we noticed when we read the code was that the order of the pieces was different than ours.\\
 Their pieces were organized like this:
 \begin{verbatim}
@@ -246,10 +246,11 @@ and ours were:
 0:|R*|  1:|R|  2: |r*|  3: |r|  4: (R*)  5: (R)  6: (r*)  7: (r)
 8:|B*|  9:|B|  10:|b*|  11:|b|  12:(B*)  13:(B)  14:(b*)  15:(b)
 \end{verbatim}
-but we fixed this easily by tweaking how our pieces were generated, so now our list looks exactly like the protocol's and we can easily receive and send piece index without worrying about which piece is which, because it's the same piece.\\ \\
-There's also a bit of frustration involved with the debugging, as the conversion between input/output from java, and javascript with json, proved to be quite a handful. There were also some conflicts regarding who was supposed to start, as the broadcasted player turn sometimes did not add up between our game sessions. We seem to have found the source of the problem but a rare bug did appear from time to time. The first player are supposed to send positionIndex = -1 (which mean that you put down a piece outside the board) and a pieceIndex. However due to the meteor framework (which is what Thaffe's server is running) only sends changes it sometime didn't send a positionIndex = -1, but it sent positionIndex = 0 (this was interpreted wrongly by our client because our client thought it was supposed to start by giving a piece) so when our client got the positionIndex = 0 and a piece X it started by putting the piece it thought it gave to the server on spot 0. Long story short, our client would crash when we got the piece from the server that our client thought it gave in the beginning or the server put down a piece on spot 0 (which was occupied by the first piece on our client's board) this lead to us having 2 different boards on the client and the server side.\\ 
-However the bug seems to be fixed, and the problem that we had doesn't always occur, so we can easily just start a new game if a match has crashed. \\ \\
-We would like to give credit to Thaffe for writing the protocol, he wrote his code in javascript using the meteor framework, but he was kind enough to write a java protocol and interface so that we could easily connect to his server, and he was also bug fixing and debugging the code when things went wrong. Big kudos to him.
+but we fixed this easily by tweaking how our pieces were generated, so now our list looks exactly like the protocol's and we can easily receive and send piece indexes without worrying about which piece is which, because it's the same piece.\\ \\
+There's also a bit of frustration involved with the debugging, as the conversion between input/output from java, and javascript with json, proved to be quite a handful. There were also some conflicts regarding who was supposed to start, as the broadcasted player turn sometimes did not add up between our game sessions. We seem to have found the source of the problem but a rare bug did appear from time to time. The first player are supposed to send positionIndex = -1 (which mean that you put down a piece outside the board) and a pieceIndex. However due to the meteor framework (which is what Thaffe's server is running) only sends changes - it sometime didn't send a positionIndex = -1, but it sent positionIndex = 0 (this was interpreted wrongly by our client because our client thought it was supposed to start by giving a piece) so when our client got the positionIndex = 0 and a piece X it started by putting the piece it thought it gave to the server on position 0. Long story short, our client would crash when we got the piece from the server that our client thought it gave in the beginning or the server put down a piece on spot 0 (which was occupied by the first piece on our client's board) this lead to us having 2 different boards on the client and the server side.\\ 
+However the bug seems to be fixed, and the problem that we had doesn't always occur, so we can easily just start a new game if a match crash. \\
+In the end we still had a few bugs where both players tries to start by giving out a piece, but we decided to just skip these games and move on if it crashed. That's why we decided to have \textbf{minimum} 100 runs instead of 100 runs exactly; we try to run 100 games, if anything happens we restart a new 100 run session but we still keep the old stats so we approach 100 games in total.\\ \\
+We would like to give credit to Thaffe for writing the protocol, he wrote his code in javascript using the meteor framework, but he was kind enough to write a java protocol and interface so that we could easily connect to his server, and he was also bug fixing and debugging the code when things went wrong. Big kudos to him. \\
 
 
 \end{document}
