--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -212,25 +212,24 @@ Play at least 50 games, with minimax depth 4 if possible, if a player can't play
 \subsection{Result}
 \subsubsection{Our vs Nicolay Thaffe}
 
-\begin{figure}[h]
-\includegraphics[width=15cm]{thaffe100.png}
-\caption{The result of a online fight}
-
-\label{figure4}
-
-\end{figure}
 
 
-  \begin{tabular}{| l  l  r l |}
+  \begin{tabular}{| l  l  r l c|}
     \hline
- 	Player 1 & (Our) & wins: & 2 \\
- 	Player 2 & (Thaffe) & wins: & 7 \\
- 	& &  Ties: & 1 \\
+ 	Player 1 & (Our) & wins: & 32 & 31\% \\
+ 	Player 2 & (Thaffe) & wins: & 66 & 65\% \\
+ 	& &  Ties: & 4 & \\
     \hline
   \end{tabular}
 
-\subsubsection{Our vs Victor}
-
+\subsubsection{Our vs Victor \& Anders}
+  \begin{tabular}{| l  l  r l c|}
+    \hline
+ 	Player 1 & (Our) & wins: & 63 & 63\% \\
+ 	Player 2 & (Thaffe) & wins: & 33 & 33\% \\
+ 	& &  Ties: & 4 & \\
+    \hline
+  \end{tabular}
 \subsubsection{Our vs Simon \& Håkon}
 
 \subsection{Experience}
