Added a comment regarding the tournament, may give you a merge conflict HD

--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -231,6 +231,8 @@ Our bot is called HD-Eivind, and the respective other players bot names are insi
   \end{tabular}
 \subsubsection{Our vs Simon \& Håkon}
 
+
+From the results we notice that we have a pretty decent bot, but the winner accross the board seems to be Thaffe, with us as a runner-up. 
 \subsection{Experience}
 Luckily for us, the tournament protocol was pretty straight forward. We got an email giving us the zip file with the needed file(s). The zip had 2 jar files (which had the needed library to connect to the server) and an interface which we needed to implement. There were also an example file which showed us which method we needed to implement and how it was done. \\
 It was pretty easy to connect to the server and start playing against the other bots, however the server didn't check for validity (for instance if the move or the given piece is a legal one which meant we had to check for it by ourselves), this did cause a lot of frustration because the board we were playing on could easily be different from the one on the server. \\
