--- a/report/aiprog1Report.tex
+++ b/report/aiprog1Report.tex
@@ -254,12 +254,12 @@ Our bot is called HD-Eivind, and the respective other players bot names are insi
  	& &  Ties: & 4 & \\
     \hline
   \end{tabular}
-\subsubsection{Our vs Simon \& Håkon}
+\subsubsection{Ours vs Simon \& Håkon}
 
 
   \begin{tabular}{| l  l  r l c|}
     \hline
- 	Player 1 & (Our) & wins: & 45 & 88\% \\
+ 	Player 1 & (HD-Eivind) & wins: & 45 & 88\% \\
  	Player 2 & (SimonHåkon) & wins: & 4 & 33\% \\
  	& &  Ties: & 2 & \\
     \hline
