--- a/report/aiprog2Report.tex
+++ b/report/aiprog2Report.tex
@@ -83,13 +83,13 @@ The assignment text  k = 8 is easy, k = 25 is medium and k=1000 is hard-case, bu
 
 \section{Demonstration of Graph-color}
 Will be shown on Friday 25. October 2013.
-We have decided that number 1 is easy, 2 is medium and 3 is hard-case.  These numbers correspond to the txt file given inside the project - that is 1 corresponds to \textit{graph-color-1.txt} etc.\\
-The first "easy" one have a 40 nodes/countries and 67 edges/countries bordering each other, the second medium one have 40 nodes and 97 edges while the hardest problem have 500 nodes with 1009 edges.\\
+We have decided that number 1 is easy, 2 is medium and 3 is hard-case.  These numbers correspond to the txt file given inside the project - that is 1 corresponds to \textit{graph-color-1.txt} etc. (do note that we swapped the numbers 1 and 2 of the provided files).\\
+The first "easy" one have a 40 nodes/countries and 67 edges/countries bordering each other, the second medium one have 40 nodes and 97 edges whilst the hardest problem have 500 nodes with 1009 edges.\\
 There's included a \textit{graph-color-0.txt} which is the example text provided that told us how to interpret the data, it's not used for the problem; only for debugging and testing, the same goes for \textit{graph-color-test1.txt} file.\\ 
 We decided to classify these problems as such because it is more logical that the more edges and nodes you have, the harder the problem becomes. It's also the only input we have for this problem.
 This problem is also known as vertex-coloring, which is a problem where you have to color every node with a color so that none of its neighbor have the same color.\\
 The data we got is explained here:\href{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt}{http://www.idi.ntnu.no/emner/it3105/materials/data/graph-color-format.txt},
-as you can see, these nodes are provided with coordinates. This coordinates are mostly there for the visual representation if needed, it's not needed for the actual problem, this is because there's no need for information \textbf{where} the nodes are located as long as we know how the edges are connected - and thereby
+as you can see, these nodes are provided with coordinates. These coordinates are mostly there for the visual representation if needed, it's not needed for the actual problem, this is because there's no need for information \textbf{where} the nodes are located as long as we know how the edges are connected - and thereby %missing?
 
 \section{Result of Graph: easy-case}
 
